changes is body part

--- a/second-index.html
+++ b/second-index.html
@@ -7,6 +7,8 @@
     <title>My Second Github Repo</title>
 </head>
 <body>
-    
+    <h1>This is the heading.</h1>
+    <p>I code now mama. Ekdom Chill. Ki bolo mama thik na.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, vel ipsum. Nihil ullam sapiente et nostrum fugiat voluptates ex aut!</p>
 </body>
 </html>
